--- a/Match-App/templates/home/home.html.twig
+++ b/Match-App/templates/home/home.html.twig
@@ -96,9 +96,9 @@
                                                 {% endif %}
                                             </div>
                                             <div class="d-flex flex-wrap gap-2">
-                                                <button class="btn btn-match btn-profile">
+                                                <a href="{{ path('profile_view', {'id': match.user.id}) }}" class="btn btn-match btn-profile">
                                                     <i class="bi bi-eye me-1"></i> Voir profil
-                                                </button>
+                                                </a>
                                                 {% if not match.hasChat %}
                                                     <a href="{{ path('start_chat', {'userId': match.user.id}) }}" class="btn btn-match btn-chat">
                                                         <i class="bi bi-chat-dots me-1"></i> Discuter
